AUTOMAKE_OPTIONS = gnu
TESTS = $(check_PROGRAMS)
INCLUDES = -I..
LDADD = ../libparse_delimited_text.la
check_PROGRAMS = test_01-1 test_01-2 test_02-1 test_02-2 test_03-1 test_03-2 test_04-1 test_04-2 test_05-1 test_05-2 test_06-1 test_06-2 test_07-1 test_07-2 test_08-1 test_09-1 test_10-1 test_11-1 test_12-1 test_12-2 test_13-1 test_14-1 test_14-2 test_15-1 test_15-2 test_16-1 test_16-2 test_16-3 test_18-1 test_19-1 test_20-1 test_21-1 test_22-1 test_23-1 test_24-1
